<resources>
    <string name="app_name">Home Service</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="FirstName">FirstName</string>
    <string name="last_Name">lastName</string>
    <string name="Address">Address</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Gender">Gender</string>
    <string name="Customer_type">Customer_Type</string>
    <string name="use_home_sewa_to_get_best_service_provider_near_by_you">Use home sewa to get best service provider near by you.</string>
    <string name="sign_in_or_create_account">Sign in or create an account</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="continue_now">Continue</string>
    <string name="or_sing_in">or sing in</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="otp_code_text">We have send OTP code to your phone number. Please, enter below to verify</string>
    <string name="verify">Verify</string>
    <string name="none">None</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_contact">Phone number</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account_sign_up">Create new account</string>
    <string name="customer">Customer</string>
    <string name="vendor">Vendor</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="Feedback">feedback</string>
    <string name="Homesewa">homesewa</string>
    <string name="posts">Posts</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">One</string>
    <string name="tab_text_2">Two</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">My Profile</string>
    <string name="favourites">Favourites</string>
    <string name="booking_history">Booking history</string>
    <string name="settings">Settings</string>
    <string name="explore">Explore</string>
    <string name="bookings">Project</string>
    <string name="search">Search</string>
    <string name="notification">Alert</string>
    <string name="LogOut">Log Out</string>
    <string name="Communicate">communicate</string>
    <string name="enter_password">Enter Password</string>
    <string name="full_name">Full Name</string>
    <string name="enter_address">Enter address</string>
    <string name="already_have_an_account_login">Already have an account? login</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="which_best_describes_you">Which best describes you?</string>
    <string name="service_user">Service User</string>
    <string name="service_giver">Service Provider</string>
    <string name="service_giver_are">Service providers are those who are here to work, provide services to customers.</string>
    <string name="service_users_can">Service users can use different available services and post problems.</string>
    <string name="please_fill_up_the_form_below">Please fill up the form below.</string>
    <string name="next">Next</string>
    <string name="description">Description</string>
    <string name="service_address">Service Address</string>
    <string name="service_date">Service Date</string>
    <string name="booking_date">Booking Date</string>
    <string name="total_price">Total Price</string>
    <string name="cancel_request">Cancel Booking</string>
    <string name="booked_on">Booked On</string>
    <string name="service_on">Service On</string>
    <string name="view_details">View Details</string>
    <string name="search_text">search_text</string>
    <string name="Home_specilist">Home Specialist</string>
    <string name="photographer">Photographer</string>
    <string name="electrian">Electrican</string>
    <string name="plumber">plumber</string>
    <string name="recommendation">Recommendations</string>
    <string name="user_name">User_name</string>
    <string name="visit_profile">Visit Profile</string>
    <string name="book_now">Book Now</string>
    <string name="send_request">Send Request</string>
</resources>