<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/dp_8_x_3"
    tools:context=".ui.bookingprocess.BookingProcessActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/service_address"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_8_x_2"
            app:layout_constraintTop_toBottomOf="@id/tilAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_8_x_15"
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnBookNow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_4_x_15"
            android:layout_marginTop="@dimen/dp_8_x_2"
            android:text="@string/send_request"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/tilDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>